# streamlit-workshop

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: land_registry_app.py  titanic_app.py  world_bank_app.py
data/price_paid_insights/: annual_price_by_property_type.parquet
data/titanic/: titanic_passengers.csv
notebooks/land_registry/: explore_land_registry_data.ipynb  prepare_land_registry_data.ipynb  query_land_registry_database.ipynb  using_database_features.ipynb
notebooks/titanic/: explore_titanic_data.ipynb  titanic_data_exploration.ipynb
notebooks/world_bank/: explore_world_bank_data.ipynb  prepare_world_bank_data.ipynb
src/charting_helpers/: __init__.py  land_registry_charting_helper.py  titanitc_charting_helper.py  world_bank_charting_helper.py
src/data_importers/: __init__.py  land_registry_data_importer.py  ons_postcode_directory_importer.py  world_bank_data_importer.py
src/data_wranglers/: __init__.py  land_registry_wrangler.py  titanic_wrangler.py  world_bank_wrangler.py
