[project]
name = "streamlit-workshop"
version = "0.1.0"
description = "Resources to run a workshop for building Streamlit applications."
requires-python = ">=3.12,<3.14"
dependencies = [
    "ipykernel",
    "nbformat>=5.10.4",
    "plotly",
    "polars",
    "pytest",
    "requests",
    "streamlit",
    "duckdb",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_wranglers", "src/data_importers", "src/charting_helpers"]
